--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,62 @@
 annotated-types==0.7.0
 anyio==4.9.0
+bidict==0.23.1
+blinker==1.9.0
+Brotli==1.1.0
+certifi==2025.7.14
 cffi==1.17.1
+charset-normalizer==3.4.2
 click==8.2.1
+ConfigArgParse==1.7.1
 cryptography==45.0.5
 exceptiongroup==1.3.0
 fastapi==0.116.1
+Flask==3.1.1
+flask-cors==6.0.1
+Flask-Login==0.6.3
+fpdf==1.7.2
+gevent==25.5.1
+geventhttpclient==2.3.4
 greenlet==3.2.3
 h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
 idna==3.10
+iniconfig==2.1.0
+itsdangerous==2.2.0
+Jinja2==3.1.6
+locust==2.37.14
+locust-cloud==1.26.3
 Mako==1.3.10
 MarkupSafe==3.0.2
+msgpack==1.1.1
+packaging==25.0
+platformdirs==4.3.8
+pluggy==1.6.0
+psutil==7.0.0
 psycopg2-binary==2.9.10
 pycparser==2.22
 pydantic==2.11.7
 pydantic_core==2.33.2
+Pygments==2.19.2
 PyJWT==2.10.1
+pytest==8.4.1
 python-dotenv==1.1.1
+python-engineio==4.12.2
+python-socketio==5.13.0
+pyzmq==27.0.0
+requests==2.32.4
+simple-websocket==1.1.0
 sniffio==1.3.1
 SQLAlchemy==2.0.41
 starlette==0.47.1
 tomli==2.2.1
 typing-inspection==0.4.1
 typing_extensions==4.14.1
+urllib3==2.5.0
 uvicorn==0.35.0
+websocket-client==1.8.0
+Werkzeug==3.1.3
+wsproto==1.2.0
+zope.event==5.1
+zope.interface==7.2
