--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - postgres_data:/var/lib/postgresql/data
       - ./backups:/backups
     healthcheck:
-      test: ["CMD", "pg_isready", "-U", "hugh"]
+      test: ["CMD", "pg_isready", "-U", "hugh", "-d", "uberpl_db"]
       interval: 10s
       retries: 5
 
@@ -24,7 +24,8 @@ services:
       JWT_SECRET: a6nPkt99rpQ+/YwQyLWOE4Ld9RoRbY5iQsHr/psqAZY=
       ENCRYPTION_PASSWORD: 4O+pMoMhQp9YzmINpnNwHKM+MxsG/dmny+SFxR7Pu2xVvSCidZD2lCaw==
       ENVIRONMENT: production
-    # No ports: - "8000:8000" — tunnel accesses localhost:8000 on host
+    ports: 
+      - "8000:8000" # — tunnel accesses localhost:8000 on host
 
 volumes:
   postgres_data:
